<resources>
    <string name="app_name">FOEHN</string>
    <string name="app_fullname">FOEHN - A Global Charity Trust</string>
    <string name="app_logo">App Logo</string>

    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to actionbar title -->
    <string name="visit_foehn">Visit Foehn</string>
    <string name="title_activity_home_before">Home</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_donation">Donation</string>
    <string name="title_activity_store">Store</string>
    <string name="title_activity_contactus">Contact us</string>
    <string name="title_activity_aboutus">About us</string>
    <string name="title_activity_home_after">Home</string>
    <string name="title_activity_print">Invoice Print</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="no_account_yet_Create_one">No account yet? Create one</string>
    <string name="error_invalid_email">Please check Email address</string>
    <string name="error_invalid_password">Please check Password.</string>
    <string name="create_account">create_account</string>

    <!-- Strings related to signup -->
    <string name="fnameInput">First Name</string>
    <string name="lnameInput">Last Name</string>
    <string name="mobileInput">8888888888</string>
    <string name="dobInput">DD-MM-YYYY</string>
    <string name="emailInput">abc@123.com</string>
    <string name="passInput">******</string>
    <string name="cpassInput">******</string>
    <string name="signup">Sign up</string>

    <!-- Strings related to contactus -->
    <string name="version">Version 1.0</string>
    <string name="feedback">Feedback</string>
    <string name="support">support@foehn.comli.com</string>

    <!-- Strings related to donate -->
    <string name="food">Food</string>
    <string name="orphan">Orphan</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="naturalcalamities">Natural Calamities</string>

    <!-- Strings related to aboutus -->
    <string name="aboutus">About us</string>
    <string name="elizabeth">Elizabeth</string>

    <!-- Strings related to aboutus -->
    <string name="aboutusdetail1">It is an android donation application where different sectors of needy people are given funds for development and betterment of their welfare.
    </string>
    <string name="aboutusdetail2">We fund some of areas Viz. Food sector, Orphans associations, Education centers, Health centers and areas affected by Natural calamities.
    </string>
    <string name="aboutusdetail3">People around the world can just login and donate for needy people. We have secured protection for our donors as their donations will rely to the people securely.
    </string>
    <string name="aboutusdetail4">Donors will be informed the info about recent involvements and related notifications respectively.
    </string>
    <string name="aboutusdetail5">We have a store, where people can buy products to promote the charity funding as promoting will boost the donations results in betterments of locality of situations.
    </string>
    <string name="aboutusdetail6">We have clothing, accessories for promoting the charity what people can buy the best quality what they could go for.
    </string>
    <string name="aboutusdetail7">A secure database systems installed in place for a proper management of various data credential sectors of organization as well as Customers management.
    </string>


    <!-- Strings related to fooddonate -->
    <string name="fooddonate1">Our food program is to initiate the help towards people who are struggling to get the food.
    </string>
    <string name="fooddonate2">We are here to provide them with the funds that has been donated.
    </string>
    <string name="fooddonate3">There are various regions on earth where people are unable to get the basic need of food and their backward community cannot even do something about it.
    </string>
    <string name="fooddonate4">What the food providing organizations demand for is money.
    </string>
    <string name="fooddonate5">We are providing the money through our donations.
    </string>
    <string name="fooddonate6">Please help people in need.
    </string>

    <!-- Strings related to orphandonate -->
    <string name="orphandonate1">Our orphans program is to initiate the help orphans and orphanages that manage to hold valuable life.
    </string>
    <string name="orphandonate2">We fund many organizations that looks over the orphanages and related issues.
    </string>
    <string name="orphandonate3">Orphans have a bright future if proper care is taken and nourishing.
    </string>
    <string name="orphandonate4">We are here to provide them with support and hope for betterment of their life in hands to grow up their lives happily.
    </string>
    <string name="orphandonate5">The total population of orphans is nourished properly and given proper education they are our future generation that can change the world.
    </string>
    <string name="orphandonate6">Please help theses growing cubs.
    </string>

    <!-- Strings related to educationdonate -->
    <string name="educationdonate1">Our education program is to support the education academies and government schools and different primary and secondary level panchayat schools to educate children and let the children make their life prosperous.
    </string>
    <string name="educationdonate2">Many places people are backing off in education and livelihood as they are not provided with proper education system and the knowledge resources and material.
    </string>
    <string name="educationdonate3">We provide funds to some of government schools and panchayat schools to manage all these educations issues to eradicate and let the child learn and lead and rule the world.
    </string>
    <string name="educationdonate4">Please support people these needy people.
    </string>

    <!-- Strings related to healthdonate -->
    <string name="healthdonate1">Our health program is to initiate the help to people need for money for treatment in un-affordable hospitals.
    </string>
    <string name="healthdonate2">We fund to different government hospitals for free treatment of the patients.
    </string>
    <string name="healthdonate3">People in Remote locations of countries cannot reach the hospitals in urban area during emergency cases so we are funding different NGOs to even provide those remote locations a hospital in terms to save people in emergence.
    </string>
    <string name="healthdonate4">A healthy country is wealthy country.
    </string>

    <!-- Strings related to naturalcalamitiesdonate -->
    <string name="naturalcalamitiesdonate1">Our natural-calamity program is to initiate help and providing immediate relief and assists in the rehabilitation process of the affected communities in the aftermath of any calamity.
    </string>
    <string name="naturalcalamitiesdonate2">We help communities build their capacity to better cope with and recover from disasters. Our foremost goal is to build resilience among the community and various stakeholders in case of any disaster.
    </string>
    <string name="naturalcalamitiesdonate3">We work closely with communities, who have been affected by disasters, so that long term development of the communities with sustainable livelihood opportunities may be secured and they are better equipped in future.
    </string>
    <string name="naturalcalamitiesdonate4">These are people who lost their home n surroundings waiting for hope to make and settle their life again back to normal and Government cannot handle entire budget to tackle act of natural calamities.
    </string>
    <string name="naturalcalamitiesdonate5">Please help these sensitive and needy people in terms to give them a better future.
    </string>

    <!-- String related to feedback-->
    <string name="feedbackfname">First Name</string>
    <string name="feedbacklname">Last Name</string>
    <string name="feedbackdetail">Please provide feedback here</string>
    <string name="feedbacksubmit">Submit</string>

    <!-- String related to navigation drawer-->
    <string name="home">Home</string>
    <string name="donation">Donation</string>
    <string name="store">Store</string>
    <string name="contactus">Contact us</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welldoneText">WellDone</string>

    <!-- String related to payment method-->
    <string name="cardpayment">Card Payment</string>
    <string name="netbanking">Net Banking</string>
    <string name="paypal">Paypal</string>

    <!-- String related to card payment-->
    <string name="cardnoInput">Card Number</string>
    <string name="expirydateInput">Expiry Date</string>
    <string name="cvvInput">CVV</string>
    <string name="cardnameInput">Card Name</string>

    <string name="continueprocedure">Continue procedure</string>

    <!-- String related to netbanking-->
    <string name="hdfcbank">HDFC Bank</string>
    <string name="icicibank">ICICI Bank</string>
    <string name="citibank">Citi Bank</string>
    <string name="sbibank">State Bank of India</string>
    <string name="axisbank">AXIS Bank</string>
    <string name="kotakbank">Kotak Bank</string>

    <!-- String related to Donate title-->
    <string name="fooddonatename">Food Donate</string>
    <string name="orphandonatename">Orphan Donate</string>
    <string name="educationdonatename">Education Donate</string>
    <string name="healthdonatename">Health Donate</string>
    <string name="naturalcalamitiesdonatename">Natural Calamities Donate</string>

    <!-- String related to payment method and card payment title-->
    <string name="paymentmethod">Payment Method</string>
    <string name="cardpaymentdetail">Card Payment Detail</string>
    <string name="afterloginid">AfterLoginId</string>
    <string name="afterloginid2">AfterLoginId2</string>

    <string name="amount">Amount</string>

    <!-- String related to size-->
    <string name="xs">XS " ( Extra Small : 34 ) "</string>
    <string name="s">S " ( Small : 36 ) "</string>
    <string name="m">M " ( Medium : 38 ) " </string>
    <string name="l">L " ( Large : 40 ) "</string>
    <string name="xl">XL " ( Extra Large : 42 ) "</string>
    <string name="xxl">XXL " ( Double Extra Large : 44 ) "</string>

    <string name="size">Size</string>

    <!-- String related to store-->
    <string name="left">&lt;</string>
    <string name="right">></string>

    <string name="print_string">Print</string>


</resources>
