<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@id/nav_donation"
            android:icon="@drawable/donate_36"
            android:title="@string/donation" />

        <item
            android:id="@id/nav_store"
            android:icon="@drawable/store"
            android:title="@string/store" />

        <item
            android:id="@id/nav_contactus"
            android:icon="@drawable/phone"
            android:title="@string/contactus" />

        <item
            android:id="@id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login" />
    </group>

</menu>
