<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sizefragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inc.thenewpirates.foehn.SizeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/sizetitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#00ffffff"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/size"
                android:textSize="@dimen/textsizebig" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/xs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xs" />

                <RadioButton
                    android:id="@+id/s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s" />

                <RadioButton
                    android:id="@+id/m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m" />

                <RadioButton
                    android:id="@+id/l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/l" />

                <RadioButton
                    android:id="@+id/xl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xl" />

                <RadioButton
                    android:id="@+id/xxl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xxl" />

            </RadioGroup>

            <Button
                android:id="@+id/continueprocedure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:enabled="true"
                android:onClick="paymentmethod"
                android:text="@string/continueprocedure" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
