<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedback_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="inc.thenewpirates.foehn.FeedbackFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <EditText
            android:id="@+id/feedbackfname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/feedbackfname"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/feedbacklname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/feedbacklname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/feedbackdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/feedbackdetail"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/feedbacksubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbacksubmit"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
